# nerpa

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  checkBy16s.py  convert_mol_to_gr.py  environment.yaml  find16s.py  getAllNames.py  nerpa.py  nerpa_init.py  prism.py  requirements.txt  run_nrp_matcher.py
Aminoacid/: Aminoacids.cpp  Aminoacids.h
NRPsPrediction/: AminoacidPrediction.cpp  AminoacidPrediction.h  NRPsPart.cpp  NRPsPart.h  NRPsPrediction.cpp  NRPsPrediction.h
conda/: meta.yaml
configs/: modifications.tsv  monomers-MT-superstrict.tsv  monomers-bh-relaxed.tsv  monomers-super-relaxed.tsv  monomers.tsv  monomersLogP.tsv  monomersdb_nerpa.json  prob_gen.cfg
data/: MiBigNRPbacteria.csv  PutativeNRPdb.tsv  PutativeNRPdb.uniq.info  mibig.csv
resources/: AAmod.tsv  aminoacids.tsv  modifications.tsv  monomers-MT-superstrict.tsv  monomers-bh-relaxed.tsv  monomers-super-relaxed.tsv  (+3 more)
src/: CMakeLists.txt  data_types.py  data_types_yaml_example.py  main.cpp  nerpa_types.py  parse_graphs.cpp  write_results.py  write_yaml_example.py
src/Aminoacid/: Aminoacid.cpp  Aminoacid.h  AminoacidInfo.cpp  AminoacidInfo.h  Aminoacids.cpp  Aminoacids.h  Formula.cpp  Formula.h  Modification.cpp  Modification.h  ModificationInfo.cpp  ModificationInfo.h  MonomerInfo.cpp  MonomerInfo.h
src/ArgParse/: Args.cpp  Args.h
src/Logger/: CMakeLists.txt  log_writers.hpp  logger.hpp  logger_impl.cpp  verify.hpp
src/Matcher/: InDelMatcher.cpp  InDelMatcher.h  Matcher.cpp  Matcher.h  MatcherBase.h  NRPsMatch.cpp  OrderedGenesMatcher.cpp  OrderedGenesMatcher.h  Segment.h  SingleUnitMatcher.cpp  SingleUnitMatcher.h
src/Matcher/Score/: Score.cpp  Score.h  ScoreFullMatch.cpp  ScoreFullMatch.h  ScoreMinowa.cpp  ScoreMinowa.h  ScoreMinowaNormalize.cpp  ScoreMinowaNormalize.h  ScoreMinowaNormalizeWithoutAffinGap.h  ScoreMinowaPositionalCoefficient.h  ScoreMinowaScoreOnly.cpp  ScoreMinowaScoreOnly.h  ScoreNRPsPredictor2Normalize.h  ScorePositionOnly.h  ScorePrism.h  ScorePrismNormalize.h  ScoreSandpuma.h  ScoreSandpumaNormalize.h  ScoreWithModification.cpp  ScoreWithModification.h
src/Matcher/Score/Base/: Score.cpp  Score.h  ScoreForUntrustedPred.h  ScoreFullMatch.cpp  ScoreFullMatch.h  ScoreNormalize.cpp  ScoreNormalize.h  ScoreOpenContinueGap.h  ScorePositionOnly.cpp  ScorePositionOnly.h  ScoreSingleUnit.h  ScoreWithModification.cpp  ScoreWithModification.h
src/Matcher/Score/Minowa/: ScoreMinowa.cpp  ScoreMinowa.h  ScoreMinowaNormalize.cpp  ScoreMinowaNormalize.h  ScoreMinowaNormalizeWithoutAffinGap.h  ScoreMinowaPositionalCoefficient.h  ScoreMinowaScoreOnly.cpp  ScoreMinowaScoreOnly.h  ScoreMinowaWithModification.cpp  ScoreMinowaWithModification.h
src/Matcher/Score/NrpsPredictor2/: MismatchScoreDependOnPredictionScore.h  ScoreNRPsPredictor2Normalize.h
src/Matcher/Score/OrderedGenes/: OrderedGenesScoreBase.h
src/Matcher/Score/Prism/: ScorePrism.cpp  ScorePrism.h  ScorePrismNormalize.h
src/Matcher/Score/Sandpuma/: ScoreSandpuma.cpp  ScoreSandpuma.h
src/NRP/: MonomericNRPBuilder.cpp  MonomericNRPBuilder.h  NRP.cpp  NRP.h  NRPBranch.cpp  NRPBranch.h  NRPBuilder.cpp  NRPBuilder.h  NRPCycle.cpp  NRPCycle.h  NRPGenerator.cpp  NRPGenerator.h  NRPLine.cpp  NRPLine.h  NRPsMatch.cpp  NRPtail.cpp  NRPtail.h
src/NRPGenerator/: NRPGenerator.cpp  NRPGenerator.h  NRPGeneratorTriplet.cpp  NRPGeneratorTriplet.h  NRPsPredictionGenerator.cpp  NRPsPredictionGenerator.h
src/NRPsMatch/: NRPsMatch.cpp  NRPsMatch.h
src/NRPsPrediction/: AAdomainPrediction.cpp  AAdomainPrediction.h  AAdomain_Prediction.cpp  AAdomain_Prediction.h  AminoacidPrediction.cpp  AminoacidPrediction.h  BGC_Prediction.cpp  BGC_Prediction.h  BgcPrediction.cpp  BgcPrediction.h  NRPsPart.cpp  NRPsPart.h  NRPsPrediction.cpp  NRPsPrediction.h  ORF_Prediction.cpp  ORF_Prediction.h  OrfPrediction.cpp  OrfPrediction.h
src/NRPsPrediction/Builders/: MinowaPredictionBuilder.cpp  MinowaPredictionBuilder.h  Nrpspredictor2Builder.cpp  Nrpspredictor2Builder.h  PredictionBuilderBase.cpp  PredictionBuilderBase.h  PrismPredictionBuilder.cpp  PrismPredictionBuilder.h  SandpumaPredictionBuilder.cpp  SandpumaPredictionBuilder.h
src/NewMatcher/: alignment_types.py  dp.py  dp_config.py  dp_config.yaml  dp_helper.py  dp_types.py  matcher.py  scoring_config.py  scoring_config.yaml  scoring_helper.py  test_dp.py  tests_prototype.txt
src/NormalizedMatch/: NormalizedMatch.cpp  NormalizedMatch.h
src/cmake/: deps.cmake  flags.cmake  includes.cmake  macros.cmake  options.cmake
src/markov_probability_model/: main.py
src/markov_probability_model/base/: alphabet.py  base_sequence_id_resolver.py  sequence.py  utils.py
src/markov_probability_model/data_loader/: alignments_loader.py  data_loader.py  fdr_loader.py  mibig_alignments_loader.py  pickle_data_loader.py  raw_data_parser.py
src/markov_probability_model/hmm/: hmm.py  pairwise_alignment_hmm.py
src/markov_probability_model/pairwise_alignment/: alignment_generator.py  fdr.py  logger.py  score_augmentations.py  sequence_aligner.py
src/markov_probability_model/pairwise_alignment/algo/: global_viterbi.py  maximum_accuracy.py  maximum_posterior_decoding.py  utils.py  viterbi.py
src/markov_probability_model/parameters/: baum_welch_parameters_estimator.py  ml_parameters_estimator.py  ml_parameters_estimator_with_modifications.py  parameters_calculator.py  utils.py
src/nerpa_pipeline/: handle_DL.py  handle_E.py  handle_MT.py  handle_PCP2.py  handle_PK.py  handle_TE.py  handle_helper.py  handle_monomers.py  handle_rban.py  logger.py  nerpa_config.py  nerpa_utils.py  postprocessing.py  predictions_preprocessor.py  rban_names_helper.py  splitter.py
src/nerpa_pipeline/NRPSPredictor_utils/: codes_handler.py  config.py  json_handler.py  main.py  model.py
src/nerpa_pipeline/NRPSPredictor_utils/codes/: nrpspredictor2_knowncodes.fasta  residue_signatures.yaml  specificity-scoring-model.joblib
src/nerpa_pipeline/NRPSPredictor_utils/tests/: test_nrpspkspredictions_txt.py
src/utils/: config.cpp  config.h  openmp_wrapper.h
tests/: CMakeLists.txt  ModificationTest.cpp  containNRPsPartTest.cpp
(+4226 files in other folders)
